--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     position: fixed;
     top: 2rem;
     left: 2rem;
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 2rem;
     z-index: 2;
@@ -53,7 +53,8 @@ body {
 .main-nav{
     position: fixed;
     top: 2rem;
-    right: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
     padding: 1rem;
     opacity: 1;
     z-index: 1000;
